Invalidate the selection anchor when the selection is set programmatically

BUG:213693

svn path=/trunk/KDE/kdelibs/kate/; revision=1046480